--- a/Public/ang.html
+++ b/Public/ang.html
@@ -17,7 +17,7 @@
             <button type="sumbit" class="btn btn-success pull-right" ng-click="onBuy()">BUY</button>
         </div>
         <div class="col-md-8">
-            <legend><h1>Your Order</h1></legend>
+            <legend><h1>Order History</h1></legend>
             <div class="list-group">
                 <a class="list-group-item" ng-repeat='item in boughtItems'>
                     <span>{{item.desc}}</span>
