--- a/Public/index.html
+++ b/Public/index.html
@@ -9,6 +9,7 @@
                 <a class="list-group-item" href="/Swift-Cheat-Sheet.pdf"><h2>Example pdf!</h2></a>
                 <a class="list-group-item" href="/Mila-Kunis-19.jpg"><h2>Photo!</h2></a>
                 <a class="list-group-item" href="/ang.html"><h2>Start shopping!</h2></a>
+                <a class="list-group-item" href="/blog.html"><h2>Blog!</h2></a>
             </div>
         </div>
     </body>
